{/* prettier-ignore */} to blocks of code to ignore

--- a/src/pages/blog/attention-economy-insights.mdx
+++ b/src/pages/blog/attention-economy-insights.mdx
@@ -7,65 +7,80 @@ date: "2021-11-03"
 featuredImage: "../../images/blog/attention-economy-multi-screens.jpg"
 ---
 
-import { Link } from 'gatsby'
+import { Link } from "gatsby"
 import attentionEconomy from "../../images/blog/the-attention-economy-60-seconds.png"
-import attentionSocial from '../../images/blog/attention-economy-social-media.jpg'
-import {Wrapper} from "../../components/Markdown-Wrapper";
+import attentionSocial from "../../images/blog/attention-economy-social-media.jpg"
+import { Wrapper } from "../../components/Markdown-Wrapper"
 
 export const meta = {
   title: "Navigating the Attention Economy: Captivate and Convert Audiences",
-  description: "The average American spends 363 minutes per day consuming digital media. Yes, you read that right: 363 minutes! How will you position your brand at the forefront of the digital age? Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives."
-};
+  description:
+    "The average American spends 363 minutes per day consuming digital media. Yes, you read that right: 363 minutes! How will you position your brand at the forefront of the digital age? Learn how to grab consumer attention, engage meaningfully, and convert passive audiences into loyal customers with strategic incentives.",
+}
 
 <Wrapper seo={meta}>
 
-  # How To Win In The Attention Economy
+# How To Win In The Attention Economy
 
-  The average American spends [363 minutes per day](https://www.statista.com/topics/1536/media-use/) consuming digital media. Yes, you read that right: 363 minutes _daily._ In those 363 minutes, they're bombarded with everything ranging from Facebook ads to online articles to pictures of French toast on their Instagram feed. The amount of digital information we have access to today is unprecedented — so much so that it's chipping away at our [collective attention span.](https://www.sciencedaily.com/releases/2019/04/190415081959.htm)
+The average American spends [363 minutes per day](https://www.statista.com/topics/1536/media-use/) consuming digital media. Yes, you read that right: 363 minutes _daily._ In those 363 minutes, they're bombarded with everything ranging from Facebook ads to online articles to pictures of French toast on their Instagram feed. The amount of digital information we have access to today is unprecedented — so much so that it's chipping away at our [collective attention span.](https://www.sciencedaily.com/releases/2019/04/190415081959.htm)
 
-  Even before the advent of social media, twentieth-century psychologist and economist Herbert A. Simon noted that "a wealth of information creates a poverty of attention." His observation still rings true today. When consumers are continuously exposed to massive amounts of digital information, their attention span becomes overwhelmed and eventually dwindles. That's bad news for companies that rely on consumer attention to generate revenue.
+Even before the advent of social media, twentieth-century psychologist and economist Herbert A. Simon noted that "a wealth of information creates a poverty of attention." His observation still rings true today. When consumers are continuously exposed to massive amounts of digital information, their attention span becomes overwhelmed and eventually dwindles. That's bad news for companies that rely on consumer attention to generate revenue.
 
-  # **An Early History of the Attention Economy**
+# **An Early History of the Attention Economy**
 
-  Though our attention may not seem like much, it's an incredibly valuable commodity. In fact, it's been a commodity even before the advent of the media. For example, babies cry to gain attention from their parents, thereby securing access to the food, clothing, and other resources necessary for survival. Adults seek attention from their romantic partners to feel loved and cared for. Similarly, companies vie for the attention of their consumers not just to win over their hearts — [but their wallets](https://memory.ai/timely-blog/the-attention-economy). Consumer eyes on content equals big bucks for advertisers.
+Though our attention may not seem like much, it's an incredibly valuable commodity. In fact, it's been a commodity even before the advent of the media. For example, babies cry to gain attention from their parents, thereby securing access to the food, clothing, and other resources necessary for survival. Adults seek attention from their romantic partners to feel loved and cared for. Similarly, companies vie for the attention of their consumers not just to win over their hearts — [but their wallets](https://memory.ai/timely-blog/the-attention-economy). Consumer eyes on content equals big bucks for advertisers.
 
-  The commodification of our attention is what Simon coined the **attention economy,** and knowing how to win your customers' attention is essential to staying competitive in the digital age.
+The commodification of our attention is what Simon coined the **attention economy,** and knowing how to win your customers' attention is essential to staying competitive in the digital age.
 
-  The attention economy isn't a recent development. Businesses have long leveraged advertisements to capture their audiences' attention, whether via the radio, newspaper, or television. But the advent of digital platforms, such as podcasts, videos, and social media, suddenly provided advertisers with much deeper insight into their customers' behavior, traits, and spending patterns. Armed with data, companies were able to directly target their prospective buyers with relevant information they knew would pique their interest. Personalized ads seemed like the way to finally win in the attention economy, but even those have fallen short of capturing audiences for long.
+The attention economy isn't a recent development. Businesses have long leveraged advertisements to capture their audiences' attention, whether via the radio, newspaper, or television. But the advent of digital platforms, such as podcasts, videos, and social media, suddenly provided advertisers with much deeper insight into their customers' behavior, traits, and spending patterns. Armed with data, companies were able to directly target their prospective buyers with relevant information they knew would pique their interest. Personalized ads seemed like the way to finally win in the attention economy, but even those have fallen short of capturing audiences for long.
 
-  <img src={attentionEconomy} alt="the economics of a single minute's worth of attention" />
+{" "}
 
-  # **Fighting The Media Clutter**
+<img
+  src={attentionEconomy}
+  alt="the economics of a single minute's worth of attention"
+/>
 
-  Consumers are exposed to between [6,000 to 10,000 ads](https://ppcprotect.com/blog/strategy/how-many-ads-do-we-see-a-day/) online every single day. As a result, advertisers struggling to keep users engaged are getting creative to break through the noise. Enter gifs, pop-ups, alerts and notifications, interactive content, and auto-play: all mechanisms for winning the attention of audiences who are quick to scroll away from ads. Popular Facebook games like Candy Crush and Clash of Clans display ads that won't let you continue playing unless you've finished the ad in its entirety. And digital products like social media are designed to [suck users in](https://www.nngroup.com/videos/the-vortex/) and keep their attention hooked on their screens.
+# **Fighting The Media Clutter**
 
-  <img className="float-left large" src={attentionSocial} alt="Customers lose interest" />
+Consumers are exposed to between [6,000 to 10,000 ads](https://ppcprotect.com/blog/strategy/how-many-ads-do-we-see-a-day/) online every single day. As a result, advertisers struggling to keep users engaged are getting creative to break through the noise. Enter gifs, pop-ups, alerts and notifications, interactive content, and auto-play: all mechanisms for winning the attention of audiences who are quick to scroll away from ads. Popular Facebook games like Candy Crush and Clash of Clans display ads that won't let you continue playing unless you've finished the ad in its entirety. And digital products like social media are designed to [suck users in](https://www.nngroup.com/videos/the-vortex/) and keep their attention hooked on their screens.
 
-  It feels like the world of advertising has become a brutal battle for valuable attention. Companies are quick to innovate new tactics for keeping their consumers' eyes glued to their content. But what if there was a way to capture genuine interest and attention from customers — without entering the bloodbath that is partaking in the attention economy?
+{" "}
 
-  There is, in fact, a more efficient way to win the hearts and minds of your consumers. It involves cutting out the middleman — i.e., digital media — and **rewarding users directly for their attention.**
+<img
+  className="float-left large"
+  src={attentionSocial}
+  alt="Customers lose interest"
+/>
 
-  # **Flipping the Script: Passive Consumption vs. Intentional Reward**
+It feels like the world of advertising has become a brutal battle for valuable attention. Companies are quick to innovate new tactics for keeping their consumers' eyes glued to their content. But what if there was a way to capture genuine interest and attention from customers — without entering the bloodbath that is partaking in the attention economy?
 
-  Consumers don't absorb up to 10,000 ads because they necessarily want to. Rather, they're exposed to so much information because they're **passive consumers** of media as they scroll through news feeds and social platforms **.** We'd venture to bet everyone reading this article mindlessly scrolls through their feeds every once in a while. (Guilty as charged).
+There is, in fact, a more efficient way to win the hearts and minds of your consumers. It involves cutting out the middleman — i.e., digital media — and **rewarding users directly for their attention.**
 
-  However, we're also willing to bet that consumers are ready to eliminate the overstimulation brought on by information overload. Instead of mindless scrolling, consumers _and_ brands alike can benefit from meaningful interaction that proves beneficial for advertiser and buyer alike.
+# **Flipping the Script: Passive Consumption vs. Intentional Reward**
 
-  # **So, What Will It Take?**
+Consumers don't absorb up to 10,000 ads because they necessarily want to. Rather, they're exposed to so much information because they're **passive consumers** of media as they scroll through news feeds and social platforms **.** We'd venture to bet everyone reading this article mindlessly scrolls through their feeds every once in a while. (Guilty as charged).
 
-  Winning in the attention economy means <Link to={"/marketing-use-cases"}>**directly incentivizing and rewarding**</Link> consumers to pay their much-valued attention to your content. Here's how to do that.
+However, we're also willing to bet that consumers are ready to eliminate the overstimulation brought on by information overload. Instead of mindless scrolling, consumers _and_ brands alike can benefit from meaningful interaction that proves beneficial for advertiser and buyer alike.
 
-  - Target a much smaller, niche audience. This will most likely be a subset of a larger audience with one specific, common trait.
-  - Discover an action trigger that will be compelling enough to stop the user from roaming away from your interaction.
-  - Engage in a sincere, honest manner. Never trick users into wasting their time, especially if there's no reward waiting for them on the other end.
-  - Be upfront about what you expect from the audience. Tell them from the beginning if you're asking them to take a quiz, watch a short video, or answer a survey.
-  - Ask for referrals from delighted customers.
-  - Analyze, optimize, and repeat the campaigns.
+# **So, What Will It Take?**
 
-  Consumers will continue to being blasted with digital ads daily. And companies will continue strategizing to win their customers' attention. But fighting for attention in an oversaturated media landscape will prove to be less effective for advertisers in the long run. <Link to={"/"}>Rewards campaigns</Link> are highly effective not only in capturing attention, but actually increasing attention span and bolstering brand loyalty among audiences.
+Winning in the attention economy means <Link to={"/marketing-use-cases"}>**directly incentivizing and rewarding**</Link> consumers to pay their much-valued attention to your content. Here's how to do that.
 
-  After all, if attention is such a valuable commodity, brands might as well **pay consumers for paying attention.**
+- Target a much smaller, niche audience. This will most likely be a subset of a larger audience with one specific, common trait.
+- Discover an action trigger that will be compelling enough to stop the user from roaming away from your interaction.
+- Engage in a sincere, honest manner. Never trick users into wasting their time, especially if there's no reward waiting for them on the other end.
+- Be upfront about what you expect from the audience. Tell them from the beginning if you're asking them to take a quiz, watch a short video, or answer a survey.
+- Ask for referrals from delighted customers.
+- Analyze, optimize, and repeat the campaigns.
 
-  <Link to={"/contact"}>Get in touch</Link> with us to learn how to engage your audience with your own personalized rewards campaign.
+Consumers will continue to being blasted with digital ads daily. And companies will continue strategizing to win their customers' attention. But fighting for attention in an oversaturated media landscape will prove to be less effective for advertisers in the long run. <Link to={"/"}>Rewards campaigns</Link> are highly effective not only in capturing attention, but actually increasing attention span and bolstering brand loyalty among audiences.
+
+After all, if attention is such a valuable commodity, brands might as well **pay consumers for paying attention.**
+
+{" "}
+
+<Link to={"/contact"}>Get in touch</Link> with us to learn how to engage your audience
+with your own personalized rewards campaign.
 
 </Wrapper>
