--- a/src/pages/blog/boost-email-responses.mdx
+++ b/src/pages/blog/boost-email-responses.mdx
@@ -5,36 +5,41 @@ date: "2022-12-16"
 featuredImage: "../../images/blog/responding-to-a-great-email.png"
 ---
 
-import respondingToEmail from '../../images/blog/responding-to-a-great-email.png'
-import {Wrapper} from "../../components/Markdown-Wrapper";
+import respondingToEmail from "../../images/blog/responding-to-a-great-email.png"
+import { Wrapper } from "../../components/Markdown-Wrapper"
 
 export const meta = {
-title: "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates",
-description: "Unlock the secrets to dramatically improving email response rates with targeted strategies. Learn how to refine your delivery, open rates, and engagement for better communication outcomes."
-};
+  title:
+    "Elevate Your Email Game: Proven Techniques to Skyrocket Response Rates",
+  description:
+    "Unlock the secrets to dramatically improving email response rates with targeted strategies. Learn how to refine your delivery, open rates, and engagement for better communication outcomes.",
+}
 
 <Wrapper seo={meta}>
   # How to increase email response rates
 
-  Every minute there are over 15.2 million texts sent and 210 emails sent. On top of that, email users are expected to reach 4.3 billion in 2025. With the persistent rise in digital communications, it's becoming increasingly difficult to cut through the noise. Both marketers and salespeople are finding new and ingenious ways to stand out from the crowd in order to get responses from prospective customers.
+Every minute there are over 15.2 million texts sent and 210 emails sent. On top of that, email users are expected to reach 4.3 billion in 2025. With the persistent rise in digital communications, it's becoming increasingly difficult to cut through the noise. Both marketers and salespeople are finding new and ingenious ways to stand out from the crowd in order to get responses from prospective customers.
 
-  Monitoring metrics are key in figuring out whether or not new tactics and strategies are working. While an important metric, response rate is not the only metric that should be measured. Different metrics are available along the email process that can correspond to the effectiveness of various email components.
+Monitoring metrics are key in figuring out whether or not new tactics and strategies are working. While an important metric, response rate is not the only metric that should be measured. Different metrics are available along the email process that can correspond to the effectiveness of various email components.
 
-  <img src={respondingToEmail} alt="everyone has a hook they love to see!" />
+{" "}
 
-  ## **Delivery rates**
+<img src={respondingToEmail} alt="everyone has a hook they love to see!" />
 
-  Delivery rates are calculated by taking the number of delivered emails divided by the total number of emails sent multiplied by 100. Delivery rate helps to determine that your prospects are utilising up to date contact information and are actually reaching your prospective customers.
+## **Delivery rates**
 
-  ## **Open Rates**
+Delivery rates are calculated by taking the number of delivered emails divided by the total number of emails sent multiplied by 100. Delivery rate helps to determine that your prospects are utilising up to date contact information and are actually reaching your prospective customers.
 
-  Open rates are calculated by taking the number of opened emails divided by the total number of emails delivered. Open rates help determine the effectiveness of your subject line. Having a catchy subject line is extremely important as it is the first thing your customer will see when they receive an email from you. In turn, the subject line will determine the likelihood of getting a response back.
+## **Open Rates**
 
-  ## **Response Rates**
+Open rates are calculated by taking the number of opened emails divided by the total number of emails delivered. Open rates help determine the effectiveness of your subject line. Having a catchy subject line is extremely important as it is the first thing your customer will see when they receive an email from you. In turn, the subject line will determine the likelihood of getting a response back.
 
-  Response rates are calculated by unique responses divided by the number of successfully delivered emails multiplied by 100. Response rates help determine whether or not emails delivered are targeting the right value proposition for your customers and encouraging them to engage with your content. Average response rates range from 10%-30%.
+## **Response Rates**
 
-  ## **Still lagging in response rates?**
+Response rates are calculated by unique responses divided by the number of successfully delivered emails multiplied by 100. Response rates help determine whether or not emails delivered are targeting the right value proposition for your customers and encouraging them to engage with your content. Average response rates range from 10%-30%.
 
-  If all of your metrics are on track but you're still not seeing an increase in response rates, try gifting with FynCom. With FynCom's interactive rewards, customers have more of an incentive to respond to your content. FynCom rewards are able to integrate into multiple platforms and marketing channels including websites, emails, and texts.
+## **Still lagging in response rates?**
+
+If all of your metrics are on track but you're still not seeing an increase in response rates, try gifting with FynCom. With FynCom's interactive rewards, customers have more of an incentive to respond to your content. FynCom rewards are able to integrate into multiple platforms and marketing channels including websites, emails, and texts.
+
 </Wrapper>
