--- a/src/pages/blog/response-rate-improvement.mdx
+++ b/src/pages/blog/response-rate-improvement.mdx
@@ -5,51 +5,62 @@ featuredImage: "../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png"
 description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
 ---
 
-import { Link } from 'gatsby'
-import attentionFragmented from '../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png'
-import decliningResponses from '../../images/blog/fyncom_pitch-deck_trends-response.png'
-import {Wrapper} from "../../components/Markdown-Wrapper";
+import { Link } from "gatsby"
+import attentionFragmented from "../../images/blog/fyndom_pitch-deck_Q32022-rewards_page.png"
+import decliningResponses from "../../images/blog/fyncom_pitch-deck_trends-response.png"
+import { Wrapper } from "../../components/Markdown-Wrapper"
 
 export const meta = {
-  title: "Response Mining: The New Frontier of Digital Engagement and Monetization",
-  description: "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system."
-};
+  title:
+    "Response Mining: The New Frontier of Digital Engagement and Monetization",
+  description:
+    "Embrace the shift to response mining in the digital age. Discover how monetizing your attention can transform unwanted communications into lucrative opportunities with FynCom's innovative rewards system.",
+}
 
 <Wrapper seo={meta}>
 
-  # Mining for Response vs. Mining for Bitcoin
+# Mining for Response vs. Mining for Bitcoin
 
-  You've heard of "Mining Bitcoin", but have you heard of "Mining Responses" or "Mining Attention"?
+You've heard of "Mining Bitcoin", but have you heard of "Mining Responses" or "Mining Attention"?
 
-  I guarantee you've experienced it! All those unknown phone calls, unwanted texts, emails, DMs on social media / chat applications are the symptom of people trying to mine your attention. So who's making the money here and why isn't it you?
+I guarantee you've experienced it! All those unknown phone calls, unwanted texts, emails, DMs on social media / chat applications are the symptom of people trying to mine your attention. So who's making the money here and why isn't it you?
 
-  ## **Why is this an issue?**
+## **Why is this an issue?**
 
-  1. More businesses are created everyday. Those businesses want your feedback so they can grow and beat the incumbent players in their space.
-  2. Technological tools/services are making it 10x easier for businesses to automate sequences of emails, calls, texts, DMs, etc. to their "prospects". These sequences can have anywhere from 6 to 20 actions associated with them.
+1. More businesses are created everyday. Those businesses want your feedback so they can grow and beat the incumbent players in their space.
+2. Technological tools/services are making it 10x easier for businesses to automate sequences of emails, calls, texts, DMs, etc. to their "prospects". These sequences can have anywhere from 6 to 20 actions associated with them.
 
-  <img src={attentionFragmented} alt="how do you stand out when your call or text comes in??" />
+{" "}
 
-  The exponential rise in our technology and similar rise in population of people/businesses make it incredibly difficult for even the best national institutions to get the responses they used to get.
+<img
+  src={attentionFragmented}
+  alt="how do you stand out when your call or text comes in??"
+/>
 
-  <img src={decliningResponses} alt="saturated communications creates a declinig response rate for all" />
+The exponential rise in our technology and similar rise in population of people/businesses make it incredibly difficult for even the best national institutions to get the responses they used to get.
 
-  ## **Why should I care?**
+{" "}
 
-  You know that thing about scarcity and value? Well, if responses are becoming scarce, shouldn't we be able to value them? Isn't there an opportunity here, where ## **you can choose to monetize your responses or price your attention so highly** that not even the biggest spenders have a chance at contacting you?
+<img
+  src={decliningResponses}
+  alt="saturated communications creates a declinig response rate for all"
+/>
 
-  In this world, how do you let "legitimate" messages from friends/family/businesses reach you without paying?
+## **Why should I care?**
 
-  **FynCom was built to answer these questions. Our system does not require Bitcoin or cryptocurrency mining. Instead, we support "Response Mining"** where people get instantly rewarded for responding to emails, texts, calls, surveys and more - while businesses get the engagement they want. Are you ready for the Response Economy?
+You know that thing about scarcity and value? Well, if responses are becoming scarce, shouldn't we be able to value them? Isn't there an opportunity here, where ## **you can choose to monetize your responses or price your attention so highly** that not even the biggest spenders have a chance at contacting you?
 
-  ## **My ask to you**
+In this world, how do you let "legitimate" messages from friends/family/businesses reach you without paying?
 
-  **Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? <Link to={"/subscribe"}>Sign up here to receive rewards emails</Link> that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
+**FynCom was built to answer these questions. Our system does not require Bitcoin or cryptocurrency mining. Instead, we support "Response Mining"** where people get instantly rewarded for responding to emails, texts, calls, surveys and more - while businesses get the engagement they want. Are you ready for the Response Economy?
 
-  <div className="button-container">
-    <Link className="learn-more-btn cash centered" to="/subscribe">Subscribe for more!</Link>
-  </div> <br/>
+## **My ask to you**
 
-  PS - Oh, and we haven't even talked about how to address the actual SCAMS / Fraud that happen through these channels. Stay tuned!
+**Would you like to get rewarded to respond to these articles and share your thoughts?** Does this kind of short-form writing interest you or someone you know? Are you curious to see what these real-life solutions look like? <Link to={"/subscribe"}>Sign up here to receive rewards emails</Link> that continue on this and similar topics. Cadence is ~2 emails / month. Please forward to any friends or communities you think would be interested in this. Thanks!
+
+{/* prettier-ignore */}
+<div className="button-container"><Link className="learn-more-btn cash centered" to="/subscribe">Subscribe for more!</Link></div> <br/>
+
+PS - Oh, and we haven't even talked about how to address the actual SCAMS / Fraud that happen through these channels. Stay tuned!
 
 </Wrapper>
